@@ -1253,13 +1253,9 @@ SEXP ddfindVar(SEXP symbol, SEXP rho)
     int i;
     SEXP vl;
 
-    /* first look for the .. symbol itself */
-    vl = findVarInFrame3(rho, symbol, TRUE);
-    if (vl != R_UnboundValue)
-        return (vl);
-
+    /* first look for ... symbol  */
+    vl = findVar(R_DotsSymbol, rho);
     i = ddVal(symbol);
-    vl = findVarInFrame3(rho, R_DotsSymbol, TRUE);
     if (vl != R_UnboundValue)
     {
         if (length(vl) >= i)
@@ -1271,12 +1267,8 @@ SEXP ddfindVar(SEXP symbol, SEXP rho)
             error(_("The ... list does not contain %d elements"), i);
     }
     else
-    {
-        vl = findVar(symbol, rho);
-        if (vl != R_UnboundValue)
-            return (vl);
         error(_("..%d used in an incorrect context, no ... to look in"), i);
-    }
+
     return R_NilValue;
 }
 
